--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Сайт учителя биологии</h1>
-        <h1>Людмилы Кольцовы Алексеевны</h1> 
+        <h1>Кольцовой Людмилы Алексеевны</h1> 
     </header>
     <div class="container">
         <div class="image">
