--- a/ludmila_koltsova/index.html
+++ b/ludmila_koltsova/index.html
@@ -13,11 +13,11 @@
     </header>
 
     <nav>
-        <a href="#home">Ссылка 1</a>
-        <a href="#gia">Ссылка 2</a>
-        <a href="#about">Ссылка 3</a>
-        <a href="#resources">Ссылка 4</a>
-        <a href="#contact">Ссылка 5</a>
+        <a href="pages/link_1.html">Ссылка 1</a>
+        <a href="pages/link_2.html">Ссылка 2</a>
+        <a href="pages/link_3.html">Ссылка 3</a>
+        <a href="pages/link_4.html">Ссылка 4</a>
+        <a href="pages/link_5.html">Ссылка 5</a>
     </nav>
 
     <div class="container">
@@ -30,9 +30,6 @@
             <p>Таким образом, усиление биологической подготовки учеников является важной составляющей их успешной и эффективной деятельности как в профессиональной сфере, так и в научной.</p>
         </div>
     </div>
-<!-- 
-    <footer>
-        &copy; 2024 Елисеева Татьяна Сергеевна. Все права защищены.
-    </footer> -->
+
 </body>
 </html>
