--- a/bogdanova_viktoria/pages/feedback.html
+++ b/bogdanova_viktoria/pages/feedback.html
@@ -25,7 +25,9 @@
         <div class="text-content">
             <p><b>Номер телефона:</b> <a style="text-decoration: none;" href="tel:+79235845608">+7(923)584-56-08</a> </p>
             <p><b>Почта:</b> <a style="text-decoration: none;" href="mailto:bogdanova_vm_19@mail.ru">bogdanova_vm_19@mail.ru</a></p>
-            <p><b>Место работы:</b> Психологическая помощь детям, консультирование родителей, проведение психолого-медико-педагогических комиссий, проведение судебных психологических экспертиз</a></p>
+            <p><b>Место работы:</b>ГБУ РХ "Центр"Радость" Богданова Виктория Михайловна</a></p>
+            <p>Педагог-психолог высшей квалификационной категории</p>
+            <p>Психологическая помощь детям, консультирование родителей, проведение психолого-медико-педагогических комиссий, проведение судебных психологических экспертиз</p>
         </div>
     </div>
 
