--- a/bogdanova_viktoria/pages/for_parents.html
+++ b/bogdanova_viktoria/pages/for_parents.html
@@ -14,6 +14,7 @@
     </header>
 
     <nav>
+        <a href="../index.html">Назад</a>
         <a href="../index.html">Главная</a>
         <a href="for_parents.html">Родителям</a>
         <a href="method_kop.html">Методическая копилка</a>
