--- a/bogdanova_viktoria/index.html
+++ b/bogdanova_viktoria/index.html
@@ -13,6 +13,7 @@
     </header>
 
     <nav>
+        <a href=""></a>
         <a href="">Главная</a>
         <a href="pages/for_parents.html">Родителям</a>
         <a href="pages/method_kop.html">Методическая копилка</a>
