--- a/bogdanova_viktoria/pages/method_kop.html
+++ b/bogdanova_viktoria/pages/method_kop.html
@@ -22,7 +22,7 @@
     </nav>
 
     <div class="container">
-        <img src="../images/teacher.png" alt="Фото учителя">
+        <img src="../images/method_kop.webp" alt="Методическая копилка">
         <div class="text-content">
             <p><a href="2020-2021.html">2020-2021</a></p>
             <p><a href="2021-2022.html">2021-2022</a></p>
