--- a/bogdanova_viktoria/pages/for_parents.html
+++ b/bogdanova_viktoria/pages/for_parents.html
@@ -22,7 +22,7 @@
     </nav>
 
     <div class="container">
-        <img src="../images/teacher.png" alt="Фото учителя">
+        <img src="../images/family.webp" alt="Фото семьи">
         <div class="text-content">
             <p><a href="https://docs.google.com/document/d/1HKxRTXaTbwbta_0jWFDdcFXF4g6HvZa6/edit?usp=drive_link&ouid=104285876435967413572&rtpof=true&sd=true">Памятка к род.собранию</a></p>
             <p><a href="https://docs.google.com/document/d/1Cv8pplU85ADiV6ujbDr9IjP_bAqtUKcj/edit?usp=drive_link&ouid=104285876435967413572&rtpof=true&sd=true">Родительское собрание (практикум) - роль эмоций в жизни ребенка</a></p>
