--- a/ludmila_koltsova/index.html
+++ b/ludmila_koltsova/index.html
@@ -13,11 +13,7 @@
     </header>
 
     <nav>
-        <a href="pages/link_1.html">Ссылка 1</a>
-        <a href="pages/link_2.html">Ссылка 2</a>
-        <a href="pages/link_3.html">Ссылка 3</a>
-        <a href="pages/link_4.html">Ссылка 4</a>
-        <a href="pages/link_5.html">Ссылка 5</a>
+        <a href="pages/lesson_1.html">Видео 1</a>
     </nav>
 
     <div class="container">
