--- a/ludmila_koltsova/index.html
+++ b/ludmila_koltsova/index.html
@@ -14,6 +14,9 @@
 
     <nav>
         <a href="pages/lesson_1.html">Видео 1</a>
+        <a href="pages/lesson_2.html">Видео 2</a>
+        <a href="https://docs.google.com/document/d/1IOjHQDatvMbiBa5VLJV53kCoXAPSkrHJ/edit?usp=drive_link&ouid=104285876435967413572&rtpof=true&sd=true">Статья 1</a>
+        <a href="https://docs.google.com/document/d/1taQdmRasxMHL-2qanoIWAayBZzdBuizI/edit?usp=drive_link&ouid=104285876435967413572&rtpof=true&sd=true">Статья 2</a>
     </nav>
 
     <div class="container">
