--- a/svetlana_petrova/index.html
+++ b/svetlana_petrova/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Сайт учителя истории</h1>
-        <h1>Петровой Светланы Сергеевной</h1> 
+        <h1>Петровой Светланы Сергеевны</h1> 
     </header>
 
     <nav>
@@ -41,3 +41,4 @@
 
 </body>
 </html>
+
