--- a/svetlana_petrova/pages/awards.html
+++ b/svetlana_petrova/pages/awards.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Сайт учителя истории</h1>
-        <h1>Петровой Светланы Сергеевной</h1> 
+        <h1>Петровой Светланы Сергеевны</h1> 
     </header>
 
     <nav>
@@ -31,4 +31,5 @@
     </div>
 
 </body>
+
 </html>
