--- a/svetlana_petrova/pages/feedback.html
+++ b/svetlana_petrova/pages/feedback.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Сайт учителя истории</h1>
-        <h1>Петровой Светланы Сергеевной</h1> 
+        <h1>Петровой Светланы Сергеевны</h1> 
         <h3>Обратная связь</h3>
     </header>
 
@@ -31,3 +31,4 @@
 
 </body>
 </html>
+
